--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/animation.css">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link href="./assets/Awesome/css/all.css" rel="stylesheet">
 
 	<title>GALERIA</title>
@@ -38,15 +39,15 @@
 
 	<div id="gallery">
 
-		<div class="viewGallery"><img src="./assets/img/gallery/1.jpg" alt="photo1"></div>
+		<div class="wow animate__animated animate__slideInLeft viewGallery"><img src="./assets/img/gallery/1.jpg" alt="photo1"></div>
 		<div class="viewGallery"><img src="./assets/img/gallery/2.jpg" alt="photo2"></div>
-		<div class="viewGallery"><img src="./assets/img/gallery/3.jpg" alt="photo3"></div>
-		<div class="viewGallery"><img src="./assets/img/gallery/4.jpg" alt="photo4"></div>
+		<div class="wow animate__animated animate__slideInRight viewGallery"><img src="./assets/img/gallery/3.jpg" alt="photo3"></div>
+		<div class="wow animate__animated animate__slideInLeft viewGallery"><img src="./assets/img/gallery/4.jpg" alt="photo4"></div>
 		<div class="viewGallery"><img src="./assets/img/gallery/5.jpg" alt="photo5"></div>
-		<div class="viewGallery"><img src="./assets/img/gallery/6.jpg" alt="photo6"></div>
-		<div class="viewGallery"><img src="./assets/img/gallery/7.jpg" alt="photo7"></div>
+		<div class="wow animate__animated animate__slideInRight viewGallery"><img src="./assets/img/gallery/6.jpg" alt="photo6"></div>
+		<div class="wow animate__animated animate__slideInLeft viewGallery"><img src="./assets/img/gallery/7.jpg" alt="photo7"></div>
 		<div class="viewGallery"><img src="./assets/img/gallery/8.jpg" alt="photo8"></div>
-		<div class="viewGallery"><img src="./assets/img/gallery/9.jpg" alt="photo9"></div>
+		<div class="wow animate__animated animate__slideInRight viewGallery"><img src="./assets/img/gallery/9.jpg" alt="photo9"></div>
 
 	</div>
 
@@ -70,6 +71,11 @@
 		</div>
 
 	</footer><!-- Fin Pie de Página -->
+
+	<script src="js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 
 </body>
 
