--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
 	<link href="./assets/Awesome/css/all.min.css" rel="stylesheet">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/animation.css">
 	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<title>CONTACTANOS</title>
@@ -139,7 +138,7 @@
 									rel="noopener noreferrer">
 									<i class="fab fa-instagram fa-2x "></i></a></li>
 							<li class="list-inline-item"><a
-									href="https://api.whatsapp.com/send/?phone=5493517441616&text&app_absent=0"
+									href="https://api.whatsapp.com/send/?phone=5493517441616&amp;text&amp;app_absent=0"
 									target="_blank" rel="noopener noreferrer">
 									<i class="fab fa-whatsapp fa-2x "></i></a></li>
 						</ul>
@@ -157,6 +156,11 @@
 				</div>
 
 			</div>
+			<div class="footer__goUp container col-12 col-md-12 col-lg-12">
+				<div>
+					<div><a href="#"><i class="fas fa-angle-double-up fa-2x p-3"></i></a></div>
+				</div>
+			</div>
 		</footer><!-- FOOTER END -->
 	</div>
 
@@ -164,7 +168,7 @@
 	<div class="modal fade" id="modalMessage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<div class="modal-header bg-purple">
+				<div class="modal-header bg-red">
 					<h5 class="modal-title" id="exampleModalLabel">HajimeFood</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
