--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
 	<meta charset="utf-8">
@@ -9,7 +9,6 @@
 	<link href="./assets/Awesome/css/all.min.css" rel="stylesheet">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/animation.css">
 	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<title>Hajimefood</title>
@@ -28,7 +27,7 @@
 			<div class="navbar-collapse collapse justify-content-center order-2 order-lg-1 navbar-custom__link navbar-custom__link--colorPink"
 				id="collapsingNavbar">
 				<ul class="navbar-nav mt-2 mt-lg-0">
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link mx-3" href="./menu.html">MENU</a>
 					</li>
 					<li class="nav-item">
@@ -53,206 +52,164 @@
 				</button>
 			</div>
 		</nav><!-- HEADER END -->
-
-		<!-- HOME LG XL (DESKTOP) -->
-		<div class="container-fluid d-none d-lg-block px-0">
-			<div class="banner banner--imgBig">
-
-				<div class="banner__overlay banner__overlay--soft"></div>
-				<div class="banner__imgBig embed-responsive">
-					<img src="./assets/img/home.png" alt="fondo">
-				</div>
-
-				<div class="banner__container h-100">
-					<div class="d-flex h-100 text-center align-items-center">
-						<div class="w-100">
-							<div>
-								<img class="img-fluid w-50 wow animate__animated animate__zoomIn animate__slow mb-4"
-									src="./assets/img/logoLarge.png" alt="Hajimefood">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- HOME XS (Celular - Iphone6)-->
-		<div class="containter-fluid d-block d-sm-block d-md-none text-center bg-black border-purple my-5">
-
-			<div class="card border-0 my-2">
-				<img src="./assets/img/menu-bgImage-celular.jpg" class="card-img" alt="MENU">
-				<div class="card-img-overlay wow animate__animated animate__bounceInLeft">
-					<div class="miniBanner miniBanner--gradient miniBanner--border">
-						<a class="miniBanner__text" href="./menu.html">MENU</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="card border-0 my-2">
-				<img src="./assets/img/reservations-bgImage-celular.jpg" class="card-img" alt="RESERVACIONES">
-				<div class="card-img-overlay wow animate__animated animate__bounceInLeft">
-					<div class="miniBanner miniBanner--gradient miniBanner--border">
-						<a class="miniBanner__text" href="./reservations.html">RESERVACIONES</a>
-					</div>
-				</div>
-			</div>
-			<div class="card border-0 my-2">
-				<img src="./assets/img/events-bgImage-celular.jpg" class="card-img" alt="EVENTOS">
-				<div class="card-img-overlay wow animate__animated animate__bounceInLeft ">
-					<div class="miniBanner miniBanner--gradient miniBanner--border">
-						<a class="miniBanner__text" href="./events.html">EVENTOS</a>
-					</div>
-				</div>
-			</div>
-			<div class="card border-0 my-2">
-				<img src="./assets/img/gallery-bgImage-celular.jpg" class="card-img" alt="GALERIA">
-				<div class="card-img-overlay wow animate__animated animate__bounceInLeft">
-					<div class="miniBanner miniBanner--gradient miniBanner--border">
-						<a class="miniBanner__text" href="./gallery.html">GALERIA</a>
-					</div>
-				</div>
-			</div>
-			<div class="card border-0 my-2">
-				<img src="./assets/img/contact-bgImage-celular.jpg" class="card-img" alt="CONTACTO">
-				<div class="card-img-overlay wow animate__animated animate__bounceInLeft">
-					<div class="miniBanner miniBanner--gradient miniBanner--border">
-						<a class="miniBanner__text" href="./contact.html">CONTACTO</a>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- HOME MD (Tablet ej IPAD) -->
-		<div class="containter-fluid d-none d-md-block d-lg-none text-center bg-gray border-purple">
-			<div class="d-flex flex-column text-center justify-content-center">
-
-				<div class="card bg-black text-white border-0  m-4">
-					<div class="row no-gutters">
-						<div class="col-md-6">
-							<div class="card-body wow animate__animated animate__bounceInLeft">
-								<div class="miniBanner miniBanner--gradient miniBanner--border">
-									<a class="miniBanner__text" href="./menu.html">MENU</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<img src="./assets/img/menu-bgImage-tablet.jpg" class="card-img" alt="Nuestro Menu">
-						</div>
-					</div>
-				</div>
-
-				<div class="card bg-black text-white border-0  m-3">
-					<div class="row no-gutters">
-						<div class="col-md-6">
-							<img src="./assets/img/reservations-bgImage-tablet.jpg" class="card-img" alt="RESERVACIONES">
-						</div>
-						<div class="col-md-6">
-							<div class="card-body wow animate__animated animate__bounceInRight">
-								<div class="miniBanner miniBanner--gradient miniBanner--border">
-									<a class="miniBanner__text" href="./reservations.html">RESERVACIONES</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="card bg-black text-white border-0  m-3">
-					<div class="row no-gutters">
-						<div class="col-md-6">
-							<div class="card-body wow animate__animated animate__bounceInLeft">
-								<div class="miniBanner miniBanner--gradient miniBanner--border">
-									<a class="miniBanner__text" href="./events.html">EVENTOS</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<img src="./assets/img/events-bgImage-tablet.jpg" class="card-img" alt="EVENTOS">
-						</div>
-					</div>
-				</div>
-
-				<div class="card bg-black text-white border-0  m-3">
-					<div class="row no-gutters">
-						<div class="col-md-6">
-							<img src="./assets/img/gallery-bgImage-tablet.jpg" class="card-img" alt="GALERIA">
-						</div>
-						<div class="col-md-6">
-							<div class="card-body wow animate__animated animate__bounceInRight">
-								<div class="miniBanner miniBanner--gradient miniBanner--border">
-									<a class="miniBanner__text" href="./gallery.html">GALERIA</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="card bg-black text-white border-0  m-3">
-					<div class="row no-gutters">
-						<div class="col-md-6">
-							<div class="card-body wow animate__animated animate__bounceInLeft">
-								<div class="miniBanner miniBanner--gradient miniBanner--border">
-									<a class="miniBanner__text" href="./contact.html">CONTACTO</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<img src="./assets/img/contact-bgImage-tablet.jpg" class="card-img" alt="CONTACTO">
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-		<!-- FOOTER -->
-		<footer class="footer container-fluid  mx-auto w-100 px-0 text-center">
-
-			<div class="d-flex flex-column flex-md-row">
-
-				<div class="footer__schedule container col-12 col-md-4 col-lg-4 p-4">
-					<div>
-						<p>Días y Horarios</p>
-						<p>Jueves a Domingos</p>
-						<p>20:30 - 00:30</p>
-					</div>
-				</div>
-
-				<div class="footer__socialMedia container col-12 col-md-4 col-lg-4 p-4">
-					
-					<nav>
-						<ul class="list-inline p-2">
-							<li class="list-inline-item"><a href="https://es-la.facebook.com/" target="_blank"
-									rel="noopener noreferrer">
-									<i class="fab fa-facebook fa-2x "></i></a></li>
-							<li class="list-inline-item"><a href="https://www.youtube.com/" target="_blank"
-									rel="noopener noreferrer">
-									<i class="fab fa-youtube fa-2x "></i></a></li>
-							<li class="list-inline-item"><a href="https://www.instagram.com/?hl=es-la" target="_blank"
-									rel="noopener noreferrer">
-									<i class="fab fa-instagram fa-2x "></i></a></li>
-							<li class="list-inline-item"><a
-									href="https://api.whatsapp.com/send/?phone=5493517441616&text&app_absent=0"
-									target="_blank" rel="noopener noreferrer">
-									<i class="fab fa-whatsapp fa-2x "></i></a></li>
-						</ul>
-					</nav>
-				</div>
-
-				<div class="footer__address container col-12 col-md-4 col-lg-4 p-4">
-					<div>
-						<address>
-							<p>Córdoba, Argentina</p>
-							<p>Av. Rafael Nueñez 4560</p>
-							<p>Tel: (351) 432-6990 / (351) 986-7496</p>
-						</address>
-					</div>
-				</div>
-
-			</div>
-		</footer><!-- FOOTER END -->
 	</div>
 
+	<!-- HOME -->
+	<div class="container-fluid d-block px-0">
 
+		<div class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+			<div class="carousel-inner">
+				<div class="carousel-item active" data-interval="5000">
+					<img srcset="./assets/img/home/home_1920_1.jpg 1920w,
+								./assets/img/home/home_1366_1.jpg 1366w,
+								./assets/img/home/home_1024_1.jpg 1024w,
+								./assets/img/home/home_768_1.jpg 768w,
+								./assets/img/home/home_375_1.jpg 375w" src="./assets/img/home/home_1920_1.jpg"
+						class="d-block w-100 kenburns-bottom" alt="photoHome1">
+				</div>
+				<div class="carousel-item" data-interval="5000">
+					<img srcset="./assets/img/home/home_1920_2.jpg 1920w,
+								./assets/img/home/home_1366_2.jpg 1366w,
+								./assets/img/home/home_1024_2.jpg 1024w,
+								./assets/img/home/home_768_2.jpg 768w,
+								./assets/img/home/home_375_2.jpg 375w" src="./assets/img/home/home_1920_2.jpg"
+						class="d-block w-100 kenburns-bottom" alt="photoHome2">
+				</div>
+				<div class="carousel-item" data-interval="5000">
+					<img srcset="./assets/img/home/home_1920_3.jpg 1920w,
+								./assets/img/home/home_1366_3.jpg 1366w,
+								./assets/img/home/home_1024_3.jpg 1024w,
+								./assets/img/home/home_768_3.jpg 768w,
+								./assets/img/home/home_375_3.jpg 375w" src="./assets/img/home/home_1920_3.jpg"
+						class="d-block w-100 kenburns-bottom" alt="photoHome3">
+				</div>
+				<div class="carousel-item" data-interval="5000">
+					<img srcset="./assets/img/home/home_1920_4.jpg 1920w,
+								./assets/img/home/home_1366_4.jpg 1366w,
+								./assets/img/home/home_1024_4.jpg 1024w,
+								./assets/img/home/home_768_4.jpg 768w,
+								./assets/img/home/home_375_4.jpg 375w" src="./assets/img/home/home_1920_4.jpg"
+						class="d-block w-100 kenburns-bottom" alt="photoHome3">
+				</div>
+
+				<div class="overlay"></div>
+				<div class="d-flex flex-row justify-content-center align-items-center logoHome">
+					<img class="img-fluid w-50 wow animate__animated animate__zoomIn animate__slow animate__delay-2s mb-4"
+						src="./assets/img/logoLarge.png" alt="goblet">
+
+				</div>
+			</div>
+		</div>
+
+		<div id="cardDeckMQ" class="container-fluid p-0 my-4 py-5">
+			<div class="d-flex flex-row justify-content-center mx-4 card-deck-wrappe">
+				<div class="card-deck">
+					<div class="card card-size border-top-0 border-right-0 border-left-0 border-bottom ">
+						<img src="./assets/img/home/menu_400.jpg" class="card-img-top" alt="menu">
+						<div class="card-body bg-black">
+							<h5 class="card-title">MENU</h5>
+							<p class="card-text">Disfruta del mejor menu</p>
+							<div class="card-text card-link">
+								<a href="./menu.html">
+									<div class="card-text">
+										Ver más
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="card card-size border-top-0 border-right-0 border-left-0 border-bottom">
+						<img src="./assets/img/home/reservations_400.jpg" class="card-img-top" alt="ENTRADAS">
+						<div class="card-body bg-black">
+							<h5 class="card-title">RESERVACIONES</h5>
+							<p class="card-text">Realizá tu reserva</p>
+							<div class="card-text card-link">
+								<a href="./reservations.html">
+									<div class="card-text"> Ver más </div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="card card-size border-top-0 border-right-0 border-left-0 border-bottom">
+						<img src="./assets/img/home/events_400.jpg" class="card-img-top" alt="EVENTOS">
+						<div class="card-body bg-black">
+							<h5 class="card-title">EVENTOS</h5>
+							<p class="card-text">Viví la experiencia</p>
+							<div class="card-text card-link">
+								<a href="./events.html">
+									<div class="card-text">Ver más</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="card card-size border-top-0 border-right-0 border-left-0 border-bottom">
+						<img src="./assets/img/home/gallery_400.jpg" class="card-img-top" alt="GALERIAS">
+						<div class="card-body bg-black">
+							<h5 class="card-title">GALERIA</h5>
+							<p class="card-text">Los mejores momentos</p>
+							<div class="card-text card-link">
+								<a href="./gallery.html">
+									<div class="card-text">Ver más</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- FOOTER -->
+	<footer class="footer container-fluid  mx-auto w-100 px-0 text-center">
+
+		<div class="d-flex flex-column flex-md-row">
+
+			<div class="footer__schedule container col-12 col-md-4 col-lg-4 p-4">
+				<div>
+					<p>Días y Horarios</p>
+					<p>Jueves a Domingos</p>
+					<p>20:30 - 00:30</p>
+				</div>
+			</div>
+
+			<div class="footer__socialMedia container col-12 col-md-4 col-lg-4 p-4">
+
+				<nav>
+					<ul class="list-inline p-2">
+						<li class="list-inline-item"><a href="https://es-la.facebook.com/" target="_blank"
+								rel="noopener noreferrer">
+								<i class="fab fa-facebook fa-2x "></i></a></li>
+						<li class="list-inline-item"><a href="https://www.youtube.com/" target="_blank"
+								rel="noopener noreferrer">
+								<i class="fab fa-youtube fa-2x "></i></a></li>
+						<li class="list-inline-item"><a href="https://www.instagram.com/?hl=es-la" target="_blank"
+								rel="noopener noreferrer">
+								<i class="fab fa-instagram fa-2x "></i></a></li>
+						<li class="list-inline-item"><a
+								href="https://api.whatsapp.com/send/?phone=5493517441616&amp;text&amp;app_absent=0"
+								target="_blank" rel="noopener noreferrer">
+								<i class="fab fa-whatsapp fa-2x "></i></a></li>
+					</ul>
+				</nav>
+			</div>
+
+			<div class="footer__address container col-12 col-md-4 col-lg-4 p-4">
+				<div>
+					<address>
+						<p>Córdoba, Argentina</p>
+						<p>Av. Rafael Nueñez 4560</p>
+						<p>Tel: (351) 432-6990 / (351) 986-7496</p>
+					</address>
+				</div>
+			</div>
+
+		</div>
+		<div class="footer__goUp container col-12 col-md-12 col-lg-12">
+			<div>
+				<div><a href="#"><i class="fas fa-angle-double-up fa-2x p-3"></i></a></div>
+			</div>
+		</div>
+	</footer><!-- FOOTER END -->
 
 	<script src="js/wow.min.js"></script>
 	<script>
