--- a/events.html
+++ b/events.html
@@ -9,7 +9,6 @@
 	<link href="./assets/Awesome/css/all.min.css" rel="stylesheet">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/animation.css">
 	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<title>EVENTOS</title>
@@ -87,7 +86,11 @@
 								y pasiones para convertir la cita gastronómica del jueves en una experiencia sensorial
 								de sabores y sonidos de Oriente.</h3>
 
-							<p class="card-text mt-5"><span class="event__date">Jueves 15 de Julio 20hs</span></p>
+							<div class="event__date mt-5">
+								<a href="/reservations.html">
+									<div class="card-text"> Jueves 15 de Julio 20hs</div>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -106,11 +109,17 @@
 						<div class="card-body">
 							<h1 class="card-title event__title">JARDIN ORIENTAL</h1>
 							<h3 class="card-text event__info mt-3 w-75">
-								Abre sus puertas para compartir las tradiciones e ingredientes del Japón, combinado con lo mejor de la
+								Abre sus puertas para compartir las tradiciones e ingredientes del Japón, combinado con
+								lo mejor de la
 								materia prima local para así lograr los sabores más destacados de la cocina asiática.
 							</h3>
 
-							<p class="card-text mt-5"><span class="event__date">Domingo 05 de Agosto 20hs</span></p>
+							<div class="event__date mt-5">
+								<a href="/reservations.html">
+									<div class="card-text"> Domingo 05 de Agosto 20hs</div>
+								</a>
+							</div>
+
 						</div>
 					</div>
 
@@ -136,7 +145,11 @@
 								japonesa en América Latina.
 							</h3>
 
-							<p class="card-text mt-5"><span class="event__date">Sábado 24 de Agosto 20hs</span></p>
+							<div class="event__date mt-5">
+								<a href="/reservations.html">
+									<div class="card-text">Sábado 24 de Agosto 20hs</div>
+								</a>
+							</div>
 						</div>
 					</div>
 
@@ -162,7 +175,11 @@
 								gastronomía nipona.
 							</h3>
 
-							<p class="card-text mt-5"><span class="event__date">Viernes 01 de Septiembre 20hs</span></p>
+							<div class="event__date mt-5">
+								<a href="/reservations.html">
+									<div class="card-text">Viernes 01 de Septiembre 20hs</div>
+								</a>
+							</div>
 						</div>
 					</div>
 
@@ -185,7 +202,7 @@
 			</div>
 
 			<div class="footer__socialMedia container col-12 col-md-4 col-lg-4 p-4">
-				
+
 				<nav>
 					<ul class="list-inline p-2">
 						<li class="list-inline-item"><a href="https://es-la.facebook.com/" target="_blank"
@@ -198,7 +215,7 @@
 								rel="noopener noreferrer">
 								<i class="fab fa-instagram fa-2x "></i></a></li>
 						<li class="list-inline-item"><a
-								href="https://api.whatsapp.com/send/?phone=5493517441616&text&app_absent=0"
+								href="https://api.whatsapp.com/send/?phone=5493517441616&amp;text&amp;app_absent=0"
 								target="_blank" rel="noopener noreferrer">
 								<i class="fab fa-whatsapp fa-2x "></i></a></li>
 					</ul>
@@ -215,6 +232,11 @@
 				</div>
 			</div>
 
+		</div>
+		<div class="footer__goUp container col-12 col-md-12 col-lg-12">
+			<div>
+				<div><a href="#"><i class="fas fa-angle-double-up fa-2x p-3"></i></a></div>
+			</div>
 		</div>
 	</footer><!-- FOOTER END -->
 
