--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,6 @@
 	<link href="./assets/Awesome/css/all.min.css" rel="stylesheet">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/animation.css">
 	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<title>MENU</title>
@@ -398,7 +397,7 @@
 			</div>
 
 			<div class="footer__socialMedia container col-12 col-md-4 col-lg-4 p-4">
-				
+
 				<nav>
 					<ul class="list-inline p-2">
 						<li class="list-inline-item"><a href="https://es-la.facebook.com/" target="_blank"
@@ -411,7 +410,7 @@
 								rel="noopener noreferrer">
 								<i class="fab fa-instagram fa-2x "></i></a></li>
 						<li class="list-inline-item"><a
-								href="https://api.whatsapp.com/send/?phone=5493517441616&text&app_absent=0"
+								href="https://api.whatsapp.com/send/?phone=5493517441616&amp;text&amp;app_absent=0"
 								target="_blank" rel="noopener noreferrer">
 								<i class="fab fa-whatsapp fa-2x "></i></a></li>
 					</ul>
@@ -428,6 +427,11 @@
 				</div>
 			</div>
 
+		</div>
+		<div class="footer__goUp container col-12 col-md-12 col-lg-12">
+			<div>
+				<div><a href="#"><i class="fas fa-angle-double-up fa-2x p-3"></i></a></div>
+			</div>
 		</div>
 	</footer><!-- FOOTER END -->
 
