Desafio Clase 12 - FIX Cierre de tag en reservations.html

--- a/reservations.html
+++ b/reservations.html
@@ -193,13 +193,13 @@
 				</div>
 			</div>
 		</div>
-
-		<script src="js/wow.min.js"></script>
-		<script>
-			new WOW().init();
-		</script>
-		<script src="./jquery/jquery-3.5.1.slim.min.js"></script>
-		<script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+	</div>
+	<script src="js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
+	<script src="./jquery/jquery-3.5.1.slim.min.js"></script>
+	<script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
