--- a/events.html
+++ b/events.html
@@ -87,7 +87,7 @@
 								de sabores y sonidos de Oriente.</h3>
 
 							<div class="event__date mt-5">
-								<a href="/reservations.html">
+								<a href="./reservations.html">
 									<div class="card-text"> Jueves 15 de Julio 20hs</div>
 								</a>
 							</div>
@@ -115,7 +115,7 @@
 							</h3>
 
 							<div class="event__date mt-5">
-								<a href="/reservations.html">
+								<a href="./reservations.html">
 									<div class="card-text"> Domingo 05 de Agosto 20hs</div>
 								</a>
 							</div>
@@ -146,7 +146,7 @@
 							</h3>
 
 							<div class="event__date mt-5">
-								<a href="/reservations.html">
+								<a href="./reservations.html">
 									<div class="card-text">Sábado 24 de Agosto 20hs</div>
 								</a>
 							</div>
@@ -176,7 +176,7 @@
 							</h3>
 
 							<div class="event__date mt-5">
-								<a href="/reservations.html">
+								<a href="./reservations.html">
 									<div class="card-text">Viernes 01 de Septiembre 20hs</div>
 								</a>
 							</div>
