Cambio de colores en Links

--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
 		<div class="banner__overlay banner__overlay--soft"></div>
 		<div class="banner__container w-100">
 			<span
-				class="d-inline-block d-sm-none event__title font-weight-light tracking-in-contract my-3 px-2">EVENTOS</span>
+				class="d-inline-block h1 d-sm-none event__title font-weight-light tracking-in-contract my-3 px-2">EVENTOS</span>
 			<span class="d-none d-md-inline-block d-lg-none display-4 tracking-in-contract my-4 px-2">EVENTOS</span>
 			<span class="d-none d-lg-inline-block display-3 tracking-in-contract my-5 px-2">EVENTOS</span>
 		</div>
