--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="navbar-collapse collapse justify-content-center order-2 order-lg-1 navbar-custom__link navbar-custom__link--colorPink"
 				id="collapsingNavbar">
 				<ul class="navbar-nav mt-2 mt-lg-0">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link mx-3" href="./menu.html">MENU</a>
 					</li>
 					<li class="nav-item">
@@ -83,19 +83,12 @@
 								./assets/img/home/home_375_3.jpg 375w" src="./assets/img/home/home_1920_3.jpg"
 						class="d-block w-100 kenburns-bottom" alt="photoHome3">
 				</div>
-				<div class="carousel-item" data-interval="5000">
-					<img srcset="./assets/img/home/home_1920_4.jpg 1920w,
-								./assets/img/home/home_1366_4.jpg 1366w,
-								./assets/img/home/home_1024_4.jpg 1024w,
-								./assets/img/home/home_768_4.jpg 768w,
-								./assets/img/home/home_375_4.jpg 375w" src="./assets/img/home/home_1920_4.jpg"
-						class="d-block w-100 kenburns-bottom" alt="photoHome3">
-				</div>
+
 
 				<div class="overlay"></div>
 				<div class="d-flex flex-row justify-content-center align-items-center logoHome">
 					<img class="img-fluid w-50 wow animate__animated animate__zoomIn animate__slow animate__delay-2s mb-4"
-						src="./assets/img/logoLarge.png" alt="goblet">
+						src="./assets/img/logoLarge.png" alt="HajimeFood">
 
 				</div>
 			</div>
