--- a/reservations.html
+++ b/reservations.html
@@ -57,11 +57,15 @@
 			<!--BANNER -->
 			<div class="banner__overlay banner__overlay--soft"></div>
 			<div class="banner__container w-100">
-				<span
-					class="d-inline-block d-sm-none h1 font-weight-light tracking-in-contract my-3 px-2">RESERVACIONES</span>
-				<span
-					class="d-none d-md-inline-block d-lg-none display-4 tracking-in-contract my-4 px-2">RESERVACIONES</span>
-				<span class="d-none d-lg-inline-block display-3 tracking-in-contract my-5 px-2">RESERVACIONES</span>
+				<span class="d-inline-block d-sm-none h1 font-weight-light tracking-in-contract my-3 px-2">
+					RESERVACIONES
+				</span>
+				<span class="d-none d-md-inline-block d-lg-none display-4 tracking-in-contract my-4 px-2">
+					RESERVACIONES
+				</span>
+				<span class="d-none d-lg-inline-block display-3 tracking-in-contract my-5 px-2">
+					RESERVACIONES
+				</span>
 			</div>
 		</div>
 		<!--FIN BANNER -->
