Se agrega SEO al proyecto

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description"
+		content="Restaurant de comida japonesa para disfrutar de la mejor gastronomia japonesa, con los Chef más destacados, te ofrecen una noche inolvidable para compartir.">
+	<meta name="keywords"
+		content="Resto, comida japonesa, sushi, música, noche, bailar, cocktails, fiesta, evento, amigos">
 	<link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/png">
 	<link rel="icon" href="./assets/icons/favicon.png" type="image/png">
 	<link href="./assets/Awesome/css/all.min.css" rel="stylesheet">
@@ -58,8 +62,10 @@
 			<!--BANNER -->
 			<div class="banner__overlay banner__overlay--soft"></div>
 			<div class="banner__container w-100">
-				<span class="d-inline-block d-sm-none h1 font-weight-light tracking-in-contract my-3 px-2">CONTACTO</span>
-				<span class="d-none d-md-inline-block d-lg-none display-4 tracking-in-contract my-4 px-2">CONTACTO</span>
+				<span
+					class="d-inline-block d-sm-none h1 font-weight-light tracking-in-contract my-3 px-2">CONTACTO</span>
+				<span
+					class="d-none d-md-inline-block d-lg-none display-4 tracking-in-contract my-4 px-2">CONTACTO</span>
 				<span class="d-none d-lg-inline-block display-3 tracking-in-contract my-5 px-2">CONTACTO</span>
 			</div>
 		</div>
@@ -125,7 +131,7 @@
 				</div>
 
 				<div class="footer__socialMedia container col-12 col-md-4 col-lg-4 p-4">
-					
+
 					<nav>
 						<ul class="list-inline p-2">
 							<li class="list-inline-item"><a href="https://es-la.facebook.com/" target="_blank"
