--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description"
+		content="Restaurant de comida japonesa para disfrutar de la mejor gastronomia japonesa, con los Chef más destacados, te ofrecen una noche inolvidable para compartir.">
+	<meta name="keywords" content="Resto, comida japonesa, sushi, música, noche, bailar, cocktails, fiesta, evento, amigos">
 	<link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/png">
 	<link rel="icon" href="./assets/icons/favicon.png" type="image/png">
 	<link href="./assets/Awesome/css/all.min.css" rel="stylesheet">
