Se agrega SEO, Extend, map-get y readme Desafio 15

--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
 						src="assets/icons/logo_small.png" alt="Mi Logo">
 				</a>
 			</div>
-			<div class="navbar-collapse collapse justify-content-center order-2 order-lg-1 navbar-custom__link navbar-custom__link--colorPink"
+			<div class="navbar-collapse collapse justify-content-center order-2 order-lg-1 navbar-custom__link navbar-custom__link--colorGold"
 				id="collapsingNavbar">
 				<ul class="navbar-nav mt-2 mt-lg-0">
 					<li class="nav-item">
@@ -101,23 +101,23 @@
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/3.jpg" class="d-block w-100"
-							alt="Dj Alexander Noite en plena sesión Octubre 2020.  2am">
+							alt="Alexander Noite Octubre 2020.  2am">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/4.jpg" class="d-block w-100"
-							alt="Recital en vivo de Funckadelic Julio 2020. 22hs ">
+							alt="Reunion de amigos de BsAs Julio 2020. 22hs ">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/5.jpg" class="d-block w-100"
-							alt="Foto de público esperando poder entrar a recinto. 00hs . 22hs ">
+							alt="Chef ultimado los ultimos detalles de plato. 22hs ">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/6.jpg" class="d-block w-100"
-							alt="Foto de mesa de trabajo del DJ Cristian Wolf  Año 2021 Enero 22hs">
+							alt="Foto de mesa Cristian Wolf  Año 2021 Enero 22hs">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/7.jpg" class="d-block w-100"
-							alt="Foto de mesa de trabajo del DJ Cristian Wolf  Año 2021 Enero 22hs">
+							alt="Plato especial pascuas 2021 Enero 22hs">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/8.jpg" class="d-block w-100"
@@ -125,7 +125,7 @@
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/9.jpg" class="d-block w-100"
-							alt="Fiesta de la Espuma con el DJ Storm Place Año 2020 Mayo.">
+							alt="Reunion de negocios de empresa Claro Año 2020 Mayo.">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/10.jpg" class="d-block w-100"
@@ -133,27 +133,27 @@
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/11.jpg" class="d-block w-100"
-							alt="Noche Techno House a cargo del DJ Lucian Perez - Abril 2021.">
+							alt="Noche a cargo del Chef Lucian Perez - Abril 2021.">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/12.jpg" class="d-block w-100"
-							alt="Fantastica noche de Verano Septiembre 2020 3am">
+							alt="Fantastica noche de Verano Marzo 2020 3am">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/13.jpg" class="d-block w-100"
-							alt="Fantastica noche de Verano Agosto 2020 3am">
+							alt="Fantastica noche de Verano Febrero 2022 3am">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/14.jpg" class="d-block w-100"
-							alt="Mesa de trabajo del DJ Akuniz Zur en su noche en Año nuevo 2020.">
+							alt="Festejo de cumpleaños de Isabella 2022.">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/15.jpg" class="d-block w-100"
-							alt="Eventos para DJs Under Electro House Mix  Mayo 2021">
+							alt="Mesa para dos, Otoño Abril 2022">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/img/gallery/16.jpg" class="d-block w-100"
-							alt="Desfrutando de la noche con la mejor iluminación  y ambiente. Marzo 2021 4am">
+							alt="Presentacion de plato principal Marzo 2022 4pm">
 					</div>
 
 				</div>
@@ -191,14 +191,14 @@
 					<a href="#!" data-toggle="modal" data-target="#Modal3">
 						<img src="./assets/img/gallery/3_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInLeft"
-							alt="Dj Alexander Noite en plena sesión Octubre 2020.  2am">
+							alt="Alexander Noite Octubre 2020.  2am">
 					</a>
 				</div>
 				<div>
 					<a href="#!" data-toggle="modal" data-target="#Modal4">
 						<img src="./assets/img/gallery/4_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInLeft"
-							alt="Recital en vivo de Funckadelic Julio 2020. 22hs ">
+							alt="Reunion de amigos de BsAs Julio 2020. 22hs ">
 					</a>
 				</div>
 			</div>
@@ -208,7 +208,7 @@
 					<a href="#!" data-toggle="modal" data-target="#Modal5">
 						<img src="./assets/img/gallery/5_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 mt-4 viewGallery wow animate__animated animate__backInLeft "
-							alt="Foto de público esperando poder entrar a recinto. 00hs . 22hs ">
+							alt="Chef ultimado los ultimos detalles de plato. 22hs ">
 					</a>
 				</div>
 				<div>
@@ -222,7 +222,7 @@
 					<a href="#!" data-toggle="modal" data-target="#Modal7">
 						<img src="./assets/img/gallery/7_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInLeft "
-							alt="Foto del invitado tomando una bebida refrescante. Año 2021 Febrero 00hs">
+							alt="Plato especial pascuas 2021 Enero 22hs">
 					</a>
 				</div>
 				<div>
@@ -239,7 +239,7 @@
 					<a href="#!" data-toggle="modal" data-target="#Modal9">
 						<img src="./assets/img/gallery/9_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 mt-4 viewGallery wow animate__animated animate__backInRight "
-							alt="Fiesta de la Espuma con el DJ Storm Place Año 2020 Mayo.">
+							alt="Reunion de negocios de empresa Claro Año 2020 Mayo.">
 					</a>
 				</div>
 				<div>
@@ -253,14 +253,14 @@
 					<a href="#!" data-toggle="modal" data-target="#Modal11">
 						<img src="./assets/img/gallery/11_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInRight "
-							alt="Noche Techno House a cargo del DJ Lucian Perez - Abril 2021.">
+							alt="Noche a cargo del Chef Lucian Perez - Abril 2021.">
 					</a>
 				</div>
 				<div>
 					<a href="#!" data-toggle="modal" data-target="#Modal12">
 						<img src="./assets/img/gallery/12_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInRight "
-							alt="Fantastica noche de Verano Septiembre 2020 3am">
+							alt="Fantastica noche de Verano Marzo 2020 3am">
 					</a>
 				</div>
 			</div>
@@ -270,28 +270,28 @@
 					<a href="#!" data-toggle="modal" data-target="#Modal13">
 						<img src="./assets/img/gallery/13_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 mt-4 viewGallery wow animate__animated animate__backInRight"
-							alt="Fantastica noche de Verano Agosto 2020 3am">
+							alt="Fantastica noche de Verano Febrero 2022 3am">
 					</a>
 				</div>
 				<div>
 					<a href="#!" data-toggle="modal" data-target="#Modal14">
 						<img src="./assets/img/gallery/14_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInRight"
-							alt="Mesa de trabajo del DJ Akuniz Zur en su noche en Año nuevo 2020.">
+							alt="Mesa para dos, Otoño Abril 2022">
 					</a>
 				</div>
 				<div>
 					<a href="#!" data-toggle="modal" data-target="#Modal15">
 						<img src="./assets/img/gallery/15_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInRight"
-							alt="Eventos para DJs Under Electro House Mix  Mayo 2021">
+							alt="Presentacion de plato principal Marzo 2022 4pm">
 					</a>
 				</div>
 				<div>
 					<a href="#!" data-toggle="modal" data-target="#Modal16">
 						<img src="./assets/img/gallery/16_medium.jpg"
 							class="w-100 shadow-1-strong rounded mb-4 viewGallery wow animate__animated animate__backInRight"
-							alt="Desfrutando de la noche con la mejor iluminación  y ambiente. Marzo 2021 4am">
+							alt="Presentacion de plato principal Marzo 2022 4pm">
 					</a>
 				</div>
 			</div>
@@ -382,7 +382,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/3.jpg" class="w-100"
-						alt="Dj Alexander Noite en plena sesión Octubre 2020.  2am">
+						alt="Alexander Noite Octubre 2020.  2am">
 					<div class="text-center py-3 bg-black">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -396,7 +396,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/4.jpg" class="w-100"
-						alt="Recital en vivo de Funckadelic Julio 2020. 22hs ">
+						alt="Reunion de amigos de BsAs Julio 2020. 22hs ">
 					<div class="text-center py-3 bg-black">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -410,7 +410,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/5.jpg" class="w-100"
-						alt="Foto de público esperando poder entrar a recinto. 00hs . 22hs ">
+						alt="Chef ultimado los ultimos detalles de plato. 22hs ">
 					<div class="text-center py-3 bg-black">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -438,7 +438,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/7.jpg" class="w-100"
-						alt="Foto del invitado tomando una bebida refrescante. Año 2021 Febrero 00hs">
+						alt="Plato especial pascuas 2021 Enero 22hs">
 					<div class="text-center py-3 bg-black">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -466,7 +466,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/9.jpg" class="w-100"
-						alt="Fiesta de la Espuma con el DJ Storm Place Año 2020 Mayo.">
+						alt="Reunion de negocios de empresa Claro Año 2020 Mayo.">
 					<div class="text-center py-3 bg-black ">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -494,7 +494,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/11.jpg" class="w-100"
-						alt="Noche Techno House a cargo del DJ Lucian Perez - Abril 2021.">
+						alt="Noche a cargo del Chef Lucian Perez - Abril 2021.">
 					<div class="text-center py-3 bg-black ">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -508,7 +508,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/12.jpg" class="w-100"
-						alt="Fantastica noche de Verano Septiembre 2020 3am">
+						alt="Fantastica noche de Verano Marzo 2020 3am">
 					<div class="text-center py-3 bg-black ">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -522,7 +522,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/13.jpg" class="w-100"
-						alt="Fantastica noche de Verano Agosto 2020 3am">
+						alt="Fantastica noche de Verano Febrero 2022 3am">
 					<div class="text-center py-3 bg-black ">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -536,7 +536,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/14.jpg" class="w-100"
-						alt="Mesa de trabajo del DJ Akuniz Zur en su noche en Año nuevo 2020.">
+						alt="Mesa para dos, Otoño Abril 2022">
 					<div class="text-center py-3 bg-black ">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -550,7 +550,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/15.jpg" class="w-100"
-						alt="Eventos para DJs Under Electro House Mix  Mayo 2021">
+						alt="Mesa para dos, Otoño Abril 2022">
 					<div class="text-center py-3 bg-black ">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
@@ -564,7 +564,7 @@
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content bg-black">
 					<img src="./assets/img/gallery/16.jpg" class="w-100"
-						alt="Desfrutando de la noche con la mejor iluminación  y ambiente. Marzo 2021 4am">
+						alt="Presentacion de plato principal Marzo 2022 4pm">
 					<div class="text-center py-3 bg-black ">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">
 							Cerrar
