Add node and node-sass. Fix varios

--- a/gallery.html
+++ b/gallery.html
@@ -336,7 +336,7 @@
 					<div>
 						<address>
 							<p>Córdoba, Argentina</p>
-							<p>Av. Rafael Nueñez 4560</p>
+							<p>Av. Rafael Nuñez 4560</p>
 							<p>Tel: (351) 432-6990 / (351) 986-7496</p>
 						</address>
 					</div>
