--- a/index.html
+++ b/index.html
@@ -89,10 +89,13 @@
 
 
 				<div class="overlay"></div>
-				<div class="d-flex flex-row justify-content-center align-items-center logoHome">
+				<div class="d-none d-sm-none d-md-none d-lg-flex flex-row justify-content-center align-items-center logoHome">
 					<img class="img-fluid w-50 wow animate__animated animate__zoomIn animate__slow animate__delay-2s mb-4"
 						src="./assets/img/logoLarge.png" alt="HajimeFood">
-
+				</div>
+				<div class="d-flex flex-row justify-content-center align-items-center logoHome d-lg-none">
+					<img class="img-fluid w-100 wow animate__animated animate__zoomIn animate__slow animate__delay-2s mb-4"
+						src="./assets/img/logoLarge.png" alt="HajimeFood">
 				</div>
 			</div>
 		</div>
@@ -193,7 +196,7 @@
 				<div>
 					<address>
 						<p>Córdoba, Argentina</p>
-						<p>Av. Rafael Nueñez 4560</p>
+						<p>Av. Rafael Nuñez 4560</p>
 						<p>Tel: (351) 432-6990 / (351) 986-7496</p>
 					</address>
 				</div>
