--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
 				<div class="col-12 col-md-12 col-lg-6">
 					<address>
 						<p class="lead">Córdoba, Argentina</p>
-						<p>Av. Rafael Nueñez 4560</p>
+						<p>Av. Rafael Nuñez 4560</p>
 						<p>Tel: (351) 432-6990 / (351) 986-7496</p>
 					</address>
 
@@ -155,7 +155,7 @@
 					<div>
 						<address>
 							<p>Córdoba, Argentina</p>
-							<p>Av. Rafael Nueñez 4560</p>
+							<p>Av. Rafael Nuñez 4560</p>
 							<p>Tel: (351) 432-6990 / (351) 986-7496</p>
 						</address>
 					</div>
