--- a/reservations.html
+++ b/reservations.html
@@ -183,8 +183,8 @@
 		<!-- Modal -->
 		<div class="modal fade" id="modalMessage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header bg-red">
+				<div class="modal-content bg-black">
+					<div class="modal-header bg-red border-bottom-0">
 						<h5 class="modal-title" id="exampleModalLabel">HajimeFood</h5>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
@@ -194,7 +194,7 @@
 						<p>Muchas gracias por tu reserva.</p>
 						<p>Te enviaremos un email con la confirmación.</p>
 					</div>
-					<div class="modal-footer bg-black">
+					<div class="modal-footer bg-black border-top-0">
 						<button type="button" class="button button--theme-purple" data-dismiss="modal">Close</button>
 					</div>
 				</div>
